--- a/src/app/features/category/edit-category/edit-category.component.html
+++ b/src/app/features/category/edit-category/edit-category.component.html
@@ -20,8 +20,9 @@
         </div>
       </div>
 
-      <div class="mt-3">
-        <button class="btn btn-primary" type="submit">Save</button>
+      <div class="mt-3 d-flex">
+        <button class="btn btn-primary" type="submit" >Save</button>
+        <button class="btn btn-danger ms-3" type="button" (click)="onDelete()">Delete</button>
       </div>
 
     </form>
