--- a/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -1,11 +1,17 @@
 <div class="container">
   <h1 class="mt-3">Add BlogPost</h1>
 
-  <form>
+  <form #form="ngForm" (ngSubmit)="onFormSubmit()">
     <div class="mt-2">
       <div class="mt-3">
         <label for="title" class="form-label">Title</label>
-        <input type="text" class="form-control" id="title" name="title" />
+        <input
+          type="text"
+          class="form-control"
+          id="title"
+          name="title"
+          [(ngModel)]="model.title"
+        />
       </div>
 
       <div class="mt-3">
@@ -15,6 +21,7 @@
           class="form-control"
           id="urlHandle"
           name="urlHandle"
+          [(ngModel)]="model.urlHandle"
         />
       </div>
 
@@ -27,21 +34,30 @@
           class="form-control"
           id="shortDescription"
           name="shortDescription"
+          [(ngModel)]="model.shortDescription"
         />
       </div>
 
       <div class="mt-3">
         <label for="content" class="form-label">Content</label>
-        <textarea name="content" id="content" class="form-control"></textarea>
+        <textarea
+          name="content"
+          id="content"
+          class="form-control"
+          [(ngModel)]="model.content"
+        ></textarea>
       </div>
 
       <div class="mt-3">
-        <label for="author" class="form-label">Featured Image Url</label>
+        <label for="featuredImageUrl" class="form-label"
+          >Featured Image Url</label
+        >
         <input
           type="text"
           class="form-control"
           id="featuredImageUrl"
           name="featuredImageUrl"
+          [(ngModel)]="model.featuredImageUrl"
         />
       </div>
 
@@ -52,16 +68,31 @@
           class="form-control"
           id="publishedDate"
           name="publishedDate"
+          value="{{ model.publishedDate }}"
+          [ngModel]="model.publishedDate | date : 'yyy-MM-dd'"
+          (ngModelChange)="model.publishedDate = $event"
         />
       </div>
 
       <div class="mt-3">
         <label for="author" class="form-label">Author</label>
-        <input type="text" class="form-control" id="author" name="author" />
+        <input
+          type="text"
+          class="form-control"
+          id="author"
+          name="author"
+          [(ngModel)]="model.author"
+        />
       </div>
 
       <div class="form-check mt-3">
-        <input class="form-check-input" type="checkbox" id="isVisible" />
+        <input
+          class="form-check-input"
+          type="checkbox"
+          id="isVisible"
+          name="isVisible"
+          [(ngModel)]="model.isVisible"
+        />
         <label class="form-check-label" for="isVisible"> Is Visible? </label>
       </div>
     </div>
