--- a/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -60,6 +60,12 @@
         <label for="featuredImageUrl" class="form-label"
           >Featured Image Url</label
         >
+
+        <ng-container *ngIf="model.featuredImageUrl !== ''">
+          <div>
+            <img [src]="model.featuredImageUrl" height="100" class="my-2" />
+          </div>
+        </ng-container>
         <input
           type="text"
           class="form-control"
