--- a/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
+++ b/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
@@ -24,7 +24,7 @@
           <td>{{ blogpost.isVisible }}</td>
           <td>
             <span *ngFor="let category of blogpost.categories">
-              <span class="badge bg-secondary">
+              <span class="badge bg-secondary me-2">
                 {{ category.name }}
               </span>
             </span>
