--- a/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
+++ b/src/app/features/blog-post/blogpost-list/blogpost-list.component.html
@@ -14,6 +14,7 @@
           <th>Short Description</th>
           <th>Is Visible?</th>
           <th>Categories</th>
+          <th></th>
         </tr>
       </thead>
 
@@ -28,6 +29,13 @@
                 {{ category.name }}
               </span>
             </span>
+          </td>
+          <td>
+            <a
+              class="btn btn-light"
+              [routerLink]="['/admin/blogposts', blogpost.id]"
+              >Edit</a
+            >
           </td>
         </tr>
       </tbody>
