--- a/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
+++ b/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
@@ -135,8 +135,12 @@
 
       <div class="mt-3 d-flex">
         <button type="submit" class="btn btn-primary">Save</button>
-        <button type="submit" class="btn btn-danger ms-3" (click)="onDelete()">Delete</button>
+        <button type="submit" class="btn btn-danger ms-3" (click)="onDelete()">
+          Delete
+        </button>
       </div>
     </form>
   </ng-container>
 </div>
+
+<app-image-selector></app-image-selector>
