--- a/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
+++ b/src/app/features/blog-post/edit-blogpost/edit-blogpost.component.html
@@ -62,14 +62,22 @@
 
         <div class="mt-3">
           <label for="featuredImageUrl" class="form-label"
-            >Featured Image Url</label
-          >
+            >Featured Image Url
+            <button
+              type="button"
+              class="btn btn-light"
+              (click)="openImageSelector()"
+            >
+              Select Image
+            </button>
+          </label>
 
           <ng-container *ngIf="model.featuredImageUrl !== ''">
             <div>
               <img [src]="model.featuredImageUrl" height="100" class="my-2" />
             </div>
           </ng-container>
+
           <input
             type="text"
             class="form-control"
@@ -143,4 +151,18 @@
   </ng-container>
 </div>
 
-<app-image-selector></app-image-selector>
+<div
+  class="images-container-modal"
+  [ngClass]="{
+    'd-block': isImageSelectorVisible,
+    'd-none': !isImageSelectorVisible
+  }"
+>
+  <button
+    type="button"
+    class="btn btn-light"
+    style="position: fixed; top: 10px; right: 10px"
+    (click)="closeImageSelector()"
+  >X</button>
+  <app-image-selector></app-image-selector>
+</div>
