--- a/src/app/shared/components/image-selector/image-selector.component.html
+++ b/src/app/shared/components/image-selector/image-selector.component.html
@@ -8,9 +8,13 @@
       <div class="col-4 p-4 bg-light">
         <h5>Upload Image</h5>
 
-        <form>
+        <form #form="ngForm" (ngSubmit)="uploadImage()">
           <div class="mt-3">
-            <input type="file" class="form-control" />
+            <input
+              type="file"
+              class="form-control"
+              (change)="onFileUploadChange($event)"
+            />
           </div>
 
           <div class="mt-3">
@@ -19,6 +23,7 @@
               class="form-control"
               placeholder="File Name"
               name="filename"
+              [(ngModel)]="fileName"
             />
           </div>
 
@@ -28,6 +33,7 @@
               class="form-control"
               placeholder="Title"
               name="title"
+              [(ngModel)]="title"
             />
           </div>
 
