--- a/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
+++ b/src/app/features/blog-post/add-blogpost/add-blogpost.component.html
@@ -58,8 +58,15 @@
 
       <div class="mt-3">
         <label for="featuredImageUrl" class="form-label"
-          >Featured Image Url</label
-        >
+          >Featured Image Url
+          <button
+            type="button"
+            class="btn btn-light"
+            (click)="openImageSelector()"
+          >
+            Select Image
+          </button>
+        </label>
 
         <ng-container *ngIf="model.featuredImageUrl !== ''">
           <div>
@@ -133,4 +140,22 @@
       <button type="submit" class="btn btn-primary">Save</button>
     </div>
   </form>
+</div>
+
+<div
+  class="images-container-modal"
+  [ngClass]="{
+    'd-block': isImageSelectorVisible,
+    'd-none': !isImageSelectorVisible
+  }"
+>
+  <button
+    type="button"
+    class="btn btn-light"
+    style="position: fixed; top: 10px; right: 10px"
+    (click)="closeImageSelector()"
+  >
+    X
+  </button>
+  <app-image-selector></app-image-selector>
 </div>
