--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -33,8 +33,17 @@
           </ul>
         </li>
       </ul>
+
       <div class="d-flex">
-        <a [routerLink]="['/login']" class="btn btn-primary">Login </a>
+        <ng-container *ngIf="user === undefined; else showLogOut">
+          <a [routerLink]="['/login']" class="btn btn-primary">Login </a>
+        </ng-container>
+        <ng-template #showLogOut>
+          <div class="d-flex align-items-center">
+            <span>{{ user?.email }} </span>
+            <button class="btn btn-primary ms-3" (click)="onLogout()">Logout</button>
+          </div>
+        </ng-template>
       </div>
     </div>
   </div>
